fix: swaggerどきゅ生成してすべて読み込めた
